fix: layout overflow issues

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -8,7 +8,7 @@
     align-items: center;
   }
   &__block {
-    flex: 0 0 20%;
+    flex: 0 0 15%;
     display: flex;
     flex-direction: column;
     justify-content: center;
