--- a/src/styles/blocks/_team.scss
+++ b/src/styles/blocks/_team.scss
@@ -30,7 +30,7 @@
   }
   &__paragraph {
     @include s3-text;
-    width: 310px;
+    width: 320px;
     @include gridpos(7, span 12, 3, 7);
     z-index: 1;
 
@@ -63,7 +63,7 @@
     line-height: 22vw;
     -webkit-text-stroke: 1px $turqoise;
     color: transparent;
-    @include gridpos(14, span 16, 12, span 14);
+    @include gridpos(14, span 16, 10, 13);
     z-index: 2;
     @media (max-width: 485px) {
       display: none;
